# tensorflow-build

./: .gitignore  README.md
example/: CMakeLists.txt
tensorflow_build/: CMakeLists.txt
tensorflow_build/cmake/: build_tensorflow.sh.in
